[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/sprites/exit_door.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/CopingArea2D.gd" type="Script" id=2]
[ext_resource path="res://assets/scenes/ExitDoor.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 12, 20 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 40 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 40 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 24, 40 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 24, 40 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 24, 40 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 24, 40 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 18.0
} ]

[node name="ExitDoor" type="KinematicBody2D"]
z_index = -5
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )
next_scene = "res://assets/scenes/levels/testworld.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12, 20 )
shape = SubResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
centered = false

[node name="LightIndicator" type="Polygon2D" parent="AnimatedSprite"]
color = Color( 0.137255, 0.160784, 0.180392, 1 )
polygon = PoolVector2Array( 11, 2, 11, 4, 13, 4, 13, 2 )

[node name="CopingArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 15
script = ExtResource( 2 )
shape_node_paths = [ NodePath("../CollisionShape2D") ]

[connection signal="body_entered" from="CopingArea2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="CopingArea2D" to="." method="_on_body_exited"]
